# Lattice

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  IMPROVEMENT_PLAN.md  PLAN.md  README.md  SMOKE_TEST.md  SPEC.md  start.bat  start.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_llm_usage.py  0003_workouts.py  0004_metric_samples.py  0005_sleep_stages.py  0006_planning_system.py  0007_plans.py  0008_alert_rules.py  0009_nutrition_goals.py  0010_conversation_session_index.py  0011_user_memory.py  0012_custom_algorithms.py  0013_dashboard_cards.py  (+8 more)
backend/lattice/: __init__.py  auth.py  config.py  db.py  main.py
backend/tests/: conftest.py  test_advisor.py  test_ai_journal.py  test_alert_checker.py  test_alert_tools.py  test_api_ai_journal.py  test_api_pending_actions.py  test_body_battery_drop.py  test_caffeine.py  test_calendar_sync.py  test_chat_agent.py  test_chat_digest.py  test_chat_history_floor.py  test_data_freshness.py  test_entries_schema.py  test_entry_markers.py  test_f9b_validator.py  test_garmin_extract.py  test_habits_adherence.py  test_health_targets.py  test_llm_observability.py  test_memory_recall_scoring.py  test_memory_schema.py  test_memory_tools.py  test_nutrition.py  test_pending_actions.py  test_planning.py  test_prompts_blocks.py  test_readiness.py  test_recommendation_store.py  test_research.py  test_routine_runner.py  test_routine_runs.py  test_routine_schema.py  test_sandbox.py  test_sleep_stages.py  test_sleep_window.py  test_staleness_watchdog.py  test_stats.py  test_timestamp_normalization.py  (+3 more)
bot/: pyproject.toml
bot/lattice_bot/: __init__.py  backend_client.py  briefings.py  config.py  formatters.py  main.py
bot/tests/: test_briefings.py
(+153 files in other folders)
