[project]
name = "lattice-bot"
version = "0.1.0"
description = "Lattice — Discord bot"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lattice_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
